IF (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
    MESSAGE(FATAL_ERROR ": IN-SOURCE BUILDS ARE NOT ALLOWED!")
ENDIF()

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10 FATAL_ERROR)

SET(PROJECT_NAME example3)

PROJECT(${PROJECT_NAME})
ENABLE_LANGUAGE(Fortran)

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(uTest)

FILE(COPY doc DESTINATION ${CMAKE_CURRENT_BINARY_DIR})